# clonehort

./: Cargo.toml  README.md
data/example/vcf/: chr22.chunk2.01maf.selected_kgp.vcf.gz.tbi
data/test/: toy_ref.fb.tsv  toy_ref.msp.tsv  toy_target.msp.tsv
data/test/lai/: toy_ref.fb  toy_samples.txt
src/: compare.rs  lib.rs  main.rs  prepare.rs
