[package]
name = "clonehort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "clonehort"
path = "src/lib.rs"

[[bin]]
name = "clonehort"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.83"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.5.1", features = ["cuda"] }
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
num_cpus = "1.16.0"
rayon = "1.10.0"
rust-htslib = "0.46.0"
