[package]
name = "clonehort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "clonehort"
path = "src/lib.rs"

[[bin]]
name = "clonehort"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.89"
#candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.5.1", features = ["cuda"] }
clap = { version = "4.5.19", features = ["derive"] }
csv = "1.3.0"
num_cpus = "1.16.0"
rayon = "1.10.0"
rust-htslib = { version = "0.47.0", default-features = false }
thiserror = "1.0.64"
